--- a/package.json
+++ b/package.json
@@ -21,6 +21,6 @@
   "devDependencies": {
     "concurrently": "^1.0.0",
     "lite-server": "^1.3.1",
-    "typescript": "^1.7.3"
+    "typescript": "1.7.3"
   }
 }
